# Semantic-Object-Stream-Discovery

./: README.md  pyproject.toml  reproduce_issue.py
src/: __init__.py  main.py
src/clustering/: autotune.py  clusterer.py
src/features/: extractor.py
src/ingestion/: video_source.py
src/output/: visualizer.py
src/tracking/: tracker.py
